--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "execa": "^8.0.1",
     "fuse.js": "^7.0.0",
     "ink": "^4.4.1",
+    "ink-spinner": "^5.0.0",
     "react": "^18.2.0",
     "simple-git": "^3.20.0"
   },
