--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
-    "lint": "eslint src --ext .ts,.tsx",
+    "lint": "eslint src --fix",
+    "lint:check": "eslint src",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
@@ -38,13 +41,20 @@
     "simple-git": "^3.20.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.37",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.53.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.1.1",
     "tsx": "^4.1.4",
     "typescript": "^5.2.2"
