Add import aliases
Another additional shortcut included in this commit: We had some types that existed in a shared directory (src/types) and I prefer a co-location pattern for types... so I moved them!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,16 @@
     "strictFunctionTypes": true,
     "jsx": "react-jsx",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@contexts/*": ["contexts/*"],
+      "@hooks/*": ["hooks/*"],
+      "@services/*": ["services/*"],
+      "@utils/*": ["utils/*"],
+      "@views/*": ["views/*"]
+    }
   },
   "include": [
     "src/**/*"
