--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "git-rake": "./bin/git-rake.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
@@ -56,6 +56,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.1.1",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.1.4",
     "typescript": "^5.2.2"
   },
