--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cosmiconfig": "^9.0.0",
     "date-fns": "^2.30.0",
     "execa": "^8.0.1",
+    "fullscreen-ink": "^0.1.0",
     "fuse.js": "^7.0.0",
     "ink": "^4.4.1",
     "ink-spinner": "^5.0.0",
