--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "tsx src/index.ts",
+    "dev": "DEV=true tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
     "lint": "eslint src --fix",
@@ -56,6 +56,7 @@
     "globals": "^16.3.0",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
+    "react-devtools-core": "^4.28.5",
     "ts-jest": "^29.1.1",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.1.4",
