--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "test": "jest",
     "lint": "eslint src --fix",
     "lint:check": "eslint src",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky"
   },
   "keywords": [
     "git",
@@ -54,7 +53,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "react-devtools-core": "^4.28.5",
     "ts-jest": "^29.1.1",
@@ -64,5 +65,10 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "npm run lint"
+    ]
   }
 }
