Add ability to exclude branches from Git Rake
The idea is to avoid annoying/unnecessary actions every time a user wants to clean up branches.
Example: imagine "main" is marked as "merged" and you wish to clean up all merged branches. You'd have to chose "select all" and then deselect your "static" branches.

--- a/.gitrakerc.example
+++ b/.gitrakerc.example
@@ -17,3 +17,7 @@ includeRemote: false
 
 # Automatically cleanup old trash entries on startup
 autoCleanupTrash: true
+
+# Branches to exclude from git rake operations (never shown or selectable)
+# These branches will be completely filtered out and cannot be deleted
+excludedBranches: ["main", "master", "develop", "staging"]
