--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "git-rake",
   "version": "1.0.0",
   "description": "Interactive CLI tool to safely prune, delete, and restore Git branches",
+  "author": "André Kallehauge <hi@andrekh.com> (https://andrekh.com/)",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
@@ -25,7 +26,6 @@
     "interactive",
     "terminal"
   ],
-  "author": "",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
