chore: Add proper logging functionality
Due to fullscreen-ink (read: how we handle alternate buffer screen), we do not actually see `console.(log|error|...)` messages, so we replace logging with Pino and write everything to logging files.
This should also make it easier for code assistance to help debugging (if that's your jam).

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fuse.js": "^7.0.0",
     "ink": "^4.4.1",
     "ink-spinner": "^5.0.0",
+    "pino": "^9.7.0",
     "react": "^18.2.0",
     "simple-git": "^3.20.0"
   },
