refactor: Restructure command hierarchy
Command name changes:
* `git-rake` is no longer a command on its own. I've been enjoying this project quite a lot, so I'm leaving this open for a potential "main menu" type command for the future.
* Moved previous `git-rake` command to `git-rake trash`
  * Added `git-rake branch` alias since that feels native to `git branch` when the intent is to permanently delete branches
* Moved base `git-rake trash` list command to `git-rake trash --list`
* Moved `git-rake cleanup` to `git-rake trash --prune` so it makes more contextual sense
* Remove `clean` command since it was without purpose

Misc:
* Created a new `src/commands` directory since the `src/index.ts` with our commands was getting quite large

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
     "paths": {
+      "@commands/*": ["commands/*"],
       "@components/*": ["components/*"],
       "@contexts/*": ["contexts/*"],
       "@hooks/*": ["hooks/*"],
