--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "git-rake": "./bin/git-rake.js"
   },
   "scripts": {
-    "build": "tsc && tsc-alias",
+    "build": "NODE_ENV=production tsc && tsc-alias",
     "dev": "DEV=true tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
@@ -28,43 +28,43 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "commander": "^11.1.0",
+    "chalk": "^5.5.0",
+    "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
-    "date-fns": "^2.30.0",
-    "execa": "^8.0.1",
+    "date-fns": "^4.1.0",
+    "execa": "^9.6.0",
     "fullscreen-ink": "^0.1.0",
-    "ink": "^4.4.1",
+    "ink": "^6.1.0",
     "ink-spinner": "^5.0.0",
     "pino": "^9.7.0",
-    "react": "^18.2.0",
-    "simple-git": "^3.20.0"
+    "react": "^19.0.0",
+    "simple-git": "^3.28.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/jest": "^29.5.7",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.37",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
+    "@eslint/js": "^9.32.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "lint-staged": "^16.1.2",
+    "jest": "^30.0.5",
+    "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "react-devtools-core": "^4.28.5",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.1.4",
-    "typescript": "^5.2.2"
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.0"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
