--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint src --fix",
     "lint:check": "eslint src",
     "typecheck": "tsc --noEmit",
+    "analyze": "find dist -name '*.js' -exec du -h {} + | sort -rh",
     "prepare": "husky"
   },
   "keywords": [
@@ -28,11 +29,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.5.0",
     "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
     "date-fns": "^4.1.0",
-    "execa": "^9.6.0",
     "fullscreen-ink": "^0.1.0",
     "ink": "^6.1.0",
     "ink-spinner": "^5.0.0",
@@ -61,7 +60,8 @@
     "ts-jest": "^29.2.5",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.0"
+    "typescript": "^5.8.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "engines": {
     "node": ">=18"
