perf(build): Add tsup to create a smaller production package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "git-rake": "./bin/git-rake.js"
   },
   "scripts": {
-    "build": "NODE_ENV=production tsc && tsc-alias",
+    "build": "tsup src/index.ts --platform node --target node18 --format esm --clean",
     "dev": "DEV=true tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
@@ -59,6 +59,7 @@
     "react-devtools-core": "^4.28.5",
     "ts-jest": "^29.2.5",
     "tsc-alias": "^1.8.16",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.0",
     "webpack-bundle-analyzer": "^4.10.2"
