--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "git-rake": "./bin/git-rake.js"
   },
   "scripts": {
-    "build": "tsup src/index.ts --platform node --target node18 --format esm --clean",
+    "build": "tsup src/index.ts --platform node --target node18 --format esm --clean --minify",
     "dev": "DEV=true tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
