fix(deps): Roll back React + Ink versions
When we use React 19 / Ink 6, we're seeing issues in our alternate buffer screen where all content is moved up 1 line and we're missing a line at the bottom.
This is a temporary downgrade but Vadim (Ink creator) have said that Ink wasn't created to fullscreen TUI (https://github.com/vadimdemedes/ink/issues/182#issuecomment-483095617). So I also consider this an open invitation to consider if we should:

1. Investigate why the new React 19 update is messing with alternate buffer screens
2. Look into the complications of migrating to something like https://github.com/infely/react-curse

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-rake",
-  "version": "1.0.0",
+  "version": "1.0.0.",
   "description": "Interactive CLI tool to safely prune, delete, and restore Git branches",
   "author": "André Kallehauge <hi@andrekh.com> (https://andrekh.com/)",
   "main": "dist/index.js",
@@ -33,17 +33,17 @@
     "cosmiconfig": "^9.0.0",
     "date-fns": "^4.1.0",
     "fullscreen-ink": "^0.1.0",
-    "ink": "^6.1.0",
+    "ink": "5.2.1",
     "ink-spinner": "^5.0.0",
     "pino": "^9.7.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.2.0",
-    "@types/react": "^19.0.2",
+    "@types/react": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
